package com.alex.kotlin.javadesignmode.strategy

/**
 * @author Alex
 * @date 2019/4/11 下午2:47
 * @email 18238818283@sina.cn
 * @desc ...
 */
interface Strategy {
    fun actionStrategy(number: Int): Int // 声明的策略方法
}